--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ easydict==1.13
 exceptiongroup==1.3.0
 executing==2.1.0
 face-recognition==1.3.0
-face_recognition_models==0.3.0
+face-recognition-models==0.3.0
 fastjsonschema==2.20.0
 flake8==7.1.1
 Flask==3.0.3
@@ -105,6 +105,7 @@ onnxruntime==1.22.0
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 packaging==24.1
+pandas==2.3.0
 pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
@@ -145,6 +146,7 @@ python-lsp-jsonrpc==1.1.2
 python-lsp-server==1.12.0
 python-slugify==8.0.4
 pytoolconfig==1.3.1
+pytz==2025.2
 pyuca==1.2
 pywin32==306
 pywin32-ctypes==0.2.3
@@ -197,6 +199,7 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20240821
 typing-inspection==0.4.1
 typing_extensions==4.12.2
+tzdata==2025.2
 ujson==5.10.0
 urllib3==2.2.2
 watchdog==5.0.2
